--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ h1 {
     color: rgb(55, 54, 54);
 }
 
+a {
+    z-index: 999;
+    font-size: 25px;
+}
+
 a.btn {
     display: inline-block;
     font-family: sans-serif;
@@ -67,6 +72,7 @@ a.btn {
     background-color: #636363;
     background-image: linear-gradient(to bottom, #636363, #000);
     color: #fff;
+    opacity: .6;
     text-transform: uppercase;
 }
 
@@ -108,4 +114,36 @@ a.btn:hover {
 
 footer p {
     padding: 25px;
+}
+
+#myBtn {
+    position: fixed;
+    /* Fixed/sticky position */
+    bottom: 20px;
+    /* Place the button at the bottom of the page */
+    right: 30px;
+    /* Place the button 30px from the right */
+    z-index: 99;
+    /* Make sure it does not overlap */
+    border: none;
+    /* Remove borders */
+    outline: none;
+    /* Remove outline */
+    background-color: black;
+    /* Set a background color */
+    color: white;
+    /* Text color */
+    cursor: pointer;
+    /* Add a mouse pointer on hover */
+    padding: 15px;
+    /* Some padding */
+    border-radius: 10px;
+    /* Rounded corners */
+    font-size: 18px;
+    /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555;
+    /* Add a dark-grey background on hover */
 }
