--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ a {
     text-decoration: inherit;
 }
 
+.nav-link {
+    font-size: 18px;
+}
+
 .hero-container {
     height: 70vh;
     width: 100%;
@@ -55,11 +59,6 @@ h1 {
     font-weight: 700;
     font-family: sans-serif;
     color: rgb(55, 54, 54);
-}
-
-a {
-    z-index: 999;
-    font-size: 25px;
 }
 
 a.btn {
